vemo-app/main/default/objects/GenericDocument__c/GenericDocument__c.object-meta.xml
<CustomObject>
    <label>Generic Document</label>
    <nameField>
        <displayFormat>GD-{0000000000}</displayFormat>
        <label>Generic Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>