vemo-app/main/default/objects/GenericDocument__c/fields/AttachmentCleanURL__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCleanURL__c</fullName>
    <formula>IF(!ISBLANK(AttachmentID__c), $Setup.GlobalSettings__c.AttachmentDownloadPrefix__c &amp; AttachmentID__c, "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Clean URL</label>
    <type>Text</type>
</CustomField>