vemo-app/main/default/objects/GenericDocument__c/fields/AttachmentName__c.field-meta.xml
<CustomField>
    <fullName>AttachmentName__c</fullName>
    <label>Attachment Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>