vemo-app/main/default/objects/GenericDocument__c/fields/ParentObjectType__c.field-meta.xml
<CustomField>
    <fullName>ParentObjectType__c</fullName>
    <label>Parent Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SObjectTypes</valueSetName>
    </valueSet>
</CustomField>