vemo-app/main/default/objects/GenericDocument__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Status__c</columns>
    <columns>ParentID__c</columns>
    <columns>ParentObjectType__c</columns>
    <columns>AttachmentCleanURL__c</columns>
    <columns>AttachmentID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>